# JaskFish

./: .gitignore  AGENTS.md  CLAUDE.md  ENGINE_REPORTING_ANALYSIS.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  PERFORMANCE_ANALYSIS.md  PERFORMANCE_IMPROVEMENTS.md  PROFILING_ANALYSIS.md  Q_SEARCH_OPTIMIZATIONS.md  README.md  REPORTING_CLEANUP_SUMMARY.md  SELF_PLAY_ANALYSIS.md  Untitled-2.ipynb  benchmark.py  benchmark_pvs.py  chessBoard.py  chess_game_2024-07-12 01:30:25.json  chess_logic.py  claude.md  codewards.ipynb  conftest.py  engine.py  engine_comm.py  game_state.json  gui.py  hsengine.py  internalRepresentation.py  main copy.py  main.py  output.txt  pvs_profile_output.txt  pvsengine.py  pyproject.toml  pytest.ini  pytest_sandbox_access.txt  requirements.txt  run_pvs_profiles.py  self_play.py  simple_engine.py  (+4 more)
.beads/: JaskFish.db  issues.jsonl  tmp_import.jsonl
agent_plans/: benchmark_harness_overhaul_plan.md  cpvsengine_improvement_plan.md  pvsengine_improvement_plan.md  sunfish_engine_analysis.md  testing_improvements_plan_20251010.md
benchmarks/: cpvsengine_benchmark_2025-10-18.txt  cpvsengine_benchmark_laptop_baseline.txt  cpvsengine_parity_compare_2025-10-18.txt
dev/: arrayRepresentation.ipynb  boardUpdate.py  chessBoard.py  game.py  handler.py  oldBoard.py  randMove.py  test.ipynb  test.py  testBoard.py  testBoard2.py
docs/: cpp_engine_feasibility.md  cpvsengine_improvement_plan.md  cpvsengine_upgrades.md  native_engine.md  oldagents.md  sunfish_engine_analysis.md  temp.txt  testing_architecture.md
engines/: __init__.py  hsengine.py  (+4 more)
(+45 files in other folders)
